--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
-    "@hapi/hapi": "^20.1.0",
+    "@hapi/hapi": "^20.3.0",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "joi": "^17.7.1",
     "nanoid": "^3.1.20",
